@@ -1,4 +1,9 @@
 {{$NEXT}}
+-bugfix: segfault when query key not followed by '='
+-bugfix: non-digits no longer accepted when parsing port number
+-more thorough testing of parsing edge cases
+-more thorough testing of memory leaks
+-added MetaProvides::Package Dist::Zilla plugin for experimental Kwalitee
 
 0.09 2018-03-08
 -constructor is more efficient
